2016-03-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/Makemodule.am: Capitalize ENABLE_ESIM.
	* configure.ac: Likewise.

2016-03-02  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.am: Always include bsps build rules.

2016-03-01  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Add --enable-pal-target argument. Add
	ENABLE_PAL_TARGET Automake conditional
	* e-hal/Makemodule.am [ENABLE_PAL_TARGET]: Set PAL CFLAGS and
	LDFLAGS.

2016-03-01  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Add --disable-ehal and --disable-elib
	arguments.
	* Makefile.am: Conditional build of e-lib based on flags given
	to configure. Conditional build of e-hal (and libraries that
	depend on e-hal).

2016-03-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_is_addr_in_emem): Use right type
	for memory segment.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/src/e-read.c (main): Remove call to
	e_reset_system().
	* e-utils/src/e-write.c (main): Likewise.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/Makemodule.am: Add e-dump-regs target.
	* e-utils/src/e-dump-regs.c: New file.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-shm-manager.c (e_shm_init_native): Fill in
	shm_alloc struct.
	* e-hal/src/epiphany-hal.c (e_init): Call e_shm_init() again.

2016-02-15  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/platform.hdf (ESYS_REGS_BASE): Remove.
	(EMEM_BASE_ADDRESS): Use mesh address.
	* bsps/parallella_E16G3_1GB/parallella_E16G3_1GB.hdf: Likewise.
	* e-hal/src/epiphany-hal-api-local.h: Update EPIPHANY_DEV.
	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Remove
	regs_base member.
	* e-hal/src/epiphany-hal.c (struct target_ops): Remove
	ee_read_esys and ee_write_esys members.
	(e_init): Comment out call to e_shm_init().
	(e_finalize): Remove call ee_disable system().
	(ee_read_esys_esim): Remove.
	(ee_read_esys_native): Remove.
	(ee_read_esys): Remove.
	(ee_write_esys_esim): Remove.